--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# ide
+.vs
+.vscode
+.fleet
+.idea
+
+# idea run
+.run
+
+# mac
+DS_Store
+
+# env
+.env
+
 # dependencies
 /node_modules
 /.pnp
