--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "nextjs-admin-toolkit",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "source .env && PORT=$PORT NODE_OPTIONS='--inspect --enable-source-maps=true' next dev --turbopack",
+    "export": "rm -rf ./dist && tsc -p tsconfig.export.json && git add dist",
+    "tag": "sh ./script/tag.sh $(cat ./version)"
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/d3v-friends/nextjs-admin-toolkit"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.1"
+    "next": "15.2.1",
+    "nextjs-tools": "github:d3v-friends/nextjs-tools#0.1.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "sass": "1.85.1",
+    "@tailwindcss/postcss": "4.0.12",
+    "@types/node": "20.17.24",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "prettier": "3.5.3",
+    "tailwindcss": "4.0.12",
+    "typescript": "5.8.2"
   }
 }
