--- a/tsconfig.export.json
+++ b/tsconfig.export.json
@@ -6,8 +6,8 @@
       "dom",
       "dom.iterable"
     ],
-    "jsx": "preserve",
-    "baseUrl": "./",
+    "jsx": "react-jsx",
+    "baseUrl": ".",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,12 +19,10 @@
     "incremental": true,
     "declaration": true,
     "inlineSourceMap": true,
-    "removeComments": true,
-    "paths": {}
+    "removeComments": true
   },
   "include": [
     "./comp",
-    "./module.d.ts",
     "./index.ts"
   ],
   "exclude": [
