--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "next": "15.2.1",
     "nextjs-tools": "github:d3v-friends/nextjs-tools#0.1.11",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "tailwindcss": "4.0.12"
   },
   "devDependencies": {
-    "tsc-alias": "1.8.11",
+    "@tailwindcss/cli": "4.0.12",
     "@tailwindcss/postcss": "4.0.12",
     "@types/luxon": "3.4.2",
     "@types/node": "20.17.24",
@@ -27,7 +28,7 @@
     "@types/react-dom": "19.0.4",
     "prettier": "3.5.3",
     "sass": "1.85.1",
-    "tailwindcss": "4.0.12",
+    "tsc-alias": "1.8.11",
     "typescript": "5.8.2"
   }
 }
