--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "nextjs-admin-toolkit",
+  "version": "0.0.18",
   "scripts": {
     "dev": "source .env && PORT=$PORT NODE_OPTIONS='--inspect --enable-source-maps=true' next dev --turbopack",
     "export": "sh ./script/build.sh",
-    "tag": "sh ./script/tag.sh $(cat ./version)",
+    "tag": "sh ./script/tag.sh $(jq \".version\" package.json | tr -d '\"')",
     "css": "tailwindcss -o ./src/scss/tailwind.css --watch"
   },
   "main": "./dist/index.js",
