--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,12 @@
       ],
       "@dist/*": [
         "./dist/*"
+      ],
+      "@var": [
+        "./src/var"
+      ],
+      "@var/*": [
+        "./src/var/*"
       ]
     }
   },
