--- a/package.json
+++ b/package.json
@@ -14,21 +14,25 @@
     "url": "https://github.com/d3v-friends/nextjs-admin-toolkit"
   },
   "dependencies": {
-    "luxon": "3.5.0",
     "@types/luxon": "3.4.2",
+    "@types/remark-prism": "^1.3.7",
+    "luxon": "3.5.0",
     "next": "15.2.1",
     "nextjs-tools": "github:d3v-friends/nextjs-tools#0.1.22",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@tailwindcss/cli": "4.0.12",
-    "tailwindcss": "4.0.12",
     "@types/node": "20.17.24",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "prettier": "3.5.3",
     "sass": "1.85.1",
+    "tailwindcss": "4.0.12",
     "typescript": "5.8.2"
   }
 }
